# news_bycodex

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: keywords.yaml  sources.yaml
memory/: interests.md  noise_patterns.md  trend_history.md
prompts/roles/: community_reporter.md  developer_reporter.md  editor_in_chief.md  final_reviewer.md  html_publisher.md  product_reporter.md  research_reporter.md  trend_analyst.md  youtube_reporter.md
reports/: 2026-05-03.html  2026-05-04.html  2026-05-05.html  2026-05-06.html  2026-05-07.html  2026-05-08.html  2026-05-09.html  2026-05-10.html  2026-05-11.html  2026-05-12.html  2026-05-13.html  2026-05-14.html  2026-05-15.html  2026-05-16.html  2026-05-17.html  2026-05-18.html  2026-05-19.html  2026-05-20.html  2026-05-21.html  2026-05-22.html  2026-05-23.html  2026-05-24.html  2026-05-25.html  2026-05-26.html  2026-05-27.html  2026-05-28.html  2026-05-29.html  2026-05-30.html  2026-05-31.html  2026-06-01.html  2026-06-02.html  2026-06-03.html  2026-06-04.html  2026-06-05.html  2026-06-06.html  2026-06-07.html  2026-06-08.html  2026-06-09.html  2026-06-10.html  2026-06-11.html  (+36 more)
skills/analyze-trends/: SKILL.md
skills/collect-rss/: SKILL.md
skills/collect-search/: SKILL.md
skills/collect-web/: SKILL.md
skills/collect-youtube/: SKILL.md
skills/final-review/: SKILL.md
skills/render-html-report/: SKILL.md
tests/: test_analysis.py  test_catch_up.py  test_cli_contract.py  test_codex_agents.py  test_collectors.py  test_config.py  test_io.py  test_pipeline.py  test_render.py  test_report_dates.py  test_review.py
(+24 files in other folders)
