[project]
name = "news-bycodex"
version = "0.1.0"
description = "Codex-native daily Agent/AI trend intelligence harness"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "python-dateutil>=2.9.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
]

[project.scripts]
news-bycodex = "news_bycodex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
